First version of the project is done.

--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -17,7 +17,7 @@
     <!-- HEADER -->
     <nav class=" header navbar navbar-light bg-dark">
         Weather App
-        <a class="logout" href="/logout">Deconnexion</a>
+        <a class="logout" href="/users/logout">Deconnexion</a>
     </nav>
 
     <!-- GRID -->
