--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
             <div class="col-12 col-sm-6 text-center">
                 <div class="formArea">
                     <h4 class="titleForm">Sign Up</h4>
-                    <form action="/sign-up" method="POST">
+                    <form action="/users/sign-up" method="POST">
                         <div class="form-group">
                             <label for="exampleInputUsername">Username</label>
                             <input name="usernameFromFront" type="text" class="form-control" placeholder="Enter username">
@@ -43,7 +43,7 @@
             <div class="col-12 col-sm-6 text-center">
                 <div class="formArea">
                     <h4 class="titleForm">Sign In</h4>
-                    <form action="/sign-in" method="POST">
+                    <form action="/users/sign-in" method="POST">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
                             <input name="emailFromFront" type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email">
