Atempt to display citys by user.

--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -31,7 +31,7 @@
             <div class="col-12 offset-lg-6 col-lg-6">
                 <!-- Mise en place du responsive 12 colonnes pour les très petits écrans jusqu'au écrans moyens. 6 colonnes à partir des grands écrans - .offset-lg-6 décale de six colonnes pour les grands écrans -->
 
-                <!-- NEW CITY ##################################################################################################################-->
+                <!-- ADD CITY ##################################################################################################################-->
                 <form action="/add-city" method="post">
                     <div class="input-group mb-3">
                         <input name="newcity" type="text" class="form-control" placeholder="Enter city name" aria-label="new city name">
@@ -41,7 +41,6 @@
                     </div>
                 </form>
             </div>
-
             <!-- MAP ################################################################################################################## -->
             <div class="col-12 col-lg-6">
                 <!-- <img class="img-fluid" src="/images/map.png" alt="map provisoire"> -->
